[package]
name = "nebular-store-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5",features = [] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
sha256 = "1.5.0"
serde_json = "1.0.115"
tokio-util = { version = "0.7.10" }
